[package]
name = "jaime"
version = "0.1.0"
authors = ["Mark Fine <mark.fine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "=1.0.118"
teloxide = "0.3.2"
teloxide-macros = "0.3.2"

reqwest = { version = "0.11.0", features = ["blocking", "json"] }

log = "0.4.8"
pretty_env_logger = "0.4.0"

tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
